# hust-macro

./: Cargo.toml  README.md  test.hust
src/: lib.rs
tests/: include_hust_test.rs
